# matcha

./: .gitignore  Cargo.toml  readme.md
buffer-atlas/: Cargo.toml
buffer-atlas/src/: buffer_cache.rs  lib.rs
gpu-utils/: Cargo.toml
gpu-utils/src/: gpu.rs  lib.rs
main/: Cargo.toml
main/src/: lib.rs  main.rs
matcha/: Cargo.toml
matcha-core/: Cargo.toml
matcha-core/src/: any_resource.rs  app.rs  application_instance.rs  backend.rs  color.rs  common_resource.rs  component.rs  context.rs  core.rs  debug_config.rs  device.rs  device_event.rs  device_input.rs  events.rs  gpu.rs  lib.rs  metrics.rs  observer.rs  principle_renderer.rs  render_node.rs  renderer.rs  renderer_command.wgsl  renderer_cull.wgsl  renderer_debug.rs  renderer_render.wgsl  text.rs  texture_allocator.rs  types.rs  ui.rs  update_flag.rs  widgets.rs  window.rs  window_surface.rs  window_ui.rs  winit_instance.rs
matcha-core/src/context/: any_resource.rs  gpu.rs  texture_allocator.rs  window_surface.rs
matcha-core/src/core/: app.rs  component.rs  context.rs  events.rs  observer.rs  renderer.rs  system_renderer.rs  types.rs  ui.rs  vertex.rs  window.rs  window_old.rs
matcha-core/src/core/device/: keyboard.rs
matcha-core/src/core/renderer/: principle_renderer.rs  renderer.rs
matcha-core/src/core/renderer/renderer/: texture_color_renderer.rs  texture_color_renderer.wgsl  vertex_color_renderer.rs
matcha-core/src/core/types/: color.rs  range.rs
matcha-core/src/core/vertex/: colored_vertex.rs  uv_vertex.rs  vertex.rs
matcha-core/src/core/window/: benchmark.rs  error.rs  global_context.rs  gpu_state.rs  keyboard_state.rs
matcha-core/src/device/: button_state.rs  keyboard.rs  keyboard_state.rs  mouse.rs  mouse_state.rs
matcha-core/src/device_event/: key_state.rs  mouse_state.rs  window_state.rs
matcha-core/src/device_input/: key_state.rs  mouse_state.rs
matcha-core/src/principle_renderer/: texture_color_renderer.rs  vertex_color_renderer.wgsl
matcha-core/src/renderer/: principle_renderer.rs  renderer_cull.wgsl  renderer_render.wgsl  texture_color_renderer.wgsl  texture_copy.rs  texture_copy.wgsl  vertex_color_renderer.rs
matcha-core/src/renderer/principle_renderer/: texture_color_renderer.rs  vertex_color_renderer.rs
matcha-core/src/tea/: component.rs
matcha-core/src/tea/renderer/: old_renderer.rs  renderer.rs
matcha-core/src/tea/renderer/renderer/: texture_object_renderer.rs
matcha-core/src/tea/types/: float_hash.rs  range.rs
matcha-core/src/tea/window/: gpu_state.rs
matcha-core/src/text/: cosmic.rs
matcha-core/src/types/: cache.rs  color.rs  position.rs  range.rs
matcha-core/src/ui/: application_context.rs  application_handler.rs  component.rs  context.rs  metrics.rs  style.rs  widget.rs  widget_context.rs
matcha-core/src/vertex/: vertex.rs
matcha-core/src/window/: error.rs  global_context.rs  gpu_context.rs  gpu_state.rs  mouse_state.rs
matcha-core/src/winit_instance/: benchmark.rs  builder.rs  error.rs  render_control.rs  ticker.rs  ui_control.rs  window_surface.rs  window_ui.rs
matcha-widgets/: Cargo.toml
matcha-widgets/src/: buffer.rs  lib.rs  primitives.rs  renderer.rs  style.rs  template.rs  types.rs  widget.rs
matcha-widgets/src/layout/: column.rs  grid.rs  grid_old.rs  padding.rs  position.rs  row.rs  space.rs  visibility.rs
matcha-widgets/src/primitives/: buffer.rs  painting.rs  property.rs
matcha-widgets/src/primitives/layout/: column.rs  grid.rs  padding.rs  position.rs  row.rs  space.rs  visibility.rs
matcha-widgets/src/primitives/painting/: image.rs  solid_box.rs
matcha-widgets/src/renderer/: line_strip.rs  texture_color.rs  texture_copy.rs  texture_copy.wgsl  vertex_color.rs  vertex_color_renderer.wgsl
matcha-widgets/src/style/: image.rs  image_old.rs  polygon.rs  solid_box.rs  text.rs  text_cosmic.rs  viewport_clear.rs
matcha-widgets/src/types/: flex.rs  size.rs
matcha-widgets/src/widget/: button.rs  image.rs  plain.rs  primitives.rs  template.rs  template_widget.rs  text.rs
matcha-widgets/src/widget/primitives/: layout.rs  painting.rs
matcha-widgets/src/widget/primitives/layout/: column.rs  grid.rs  padding.rs  position.rs  row.rs  space.rs  visibility.rs
matcha-widgets/src/widget/primitives/painting/: image.rs  n_polygon.rs  solid_box.rs
matcha-widgets/src/widget/primitives/property/: div_size.rs  flex.rs
matcha-widgets/src/widgets_old/: divs.rs  framework.rs  template.rs
matcha-widgets/src/widgets_old/divs/: grid.rs  position.rs
matcha-widgets/src/widgets_old/divs/container/: layout.rs
matcha-widgets/src/widgets_old/primitive/: solid_color.rs  solid_color_framework.rs  style_box.rs
matcha-widgets/src/widgets_old/primitive/style_box/renderer/: blur.wgsl  texture.wgsl  texture_renderer.rs
matcha-widgets/src/widgets_old/property/: div_size.rs  paint.rs
matcha/src/: lib.rs  main.rs
renderer/: Cargo.toml
renderer/src/: core_renderer.rs  debug_renderer.rs  lib.rs  render_node.rs  widgets_renderer.rs
src/: lib.rs  main.rs  matcha.rs  tea.rs  tea_v1.rs  widgets.rs
src/matcha/: component.rs  context.rs  renderer.rs  renderer.wgsl  types.rs  ui.rs  widgets.rs  window.rs
src/tea/: affine.rs  app.rs  application_context.rs  component.rs  context.rs  event.rs  events.rs  mod.rs  render.rs  render_colored.wgsl  render_old.rs  renderer.rs  types.rs  ui.rs  vertex.rs  widgets.rs  window.rs
src/tea_v1/: app.rs  types.rs  ui.rs  window.rs
src/tea_v2/: app.rs  application_context.rs  event.rs  render.rs  window.rs
src/text/: cosmic.rs  rasterizer.rs
src/widgets/: divs.rs  elements.rs  template.rs
src/widgets_old/: elements.rs  primitive.rs  property.rs
text-render/: Cargo.toml
text-render/src/: cache_atlas.rs  lib.rs  recursive_atlas.rs
text-render/src/text/: core.rs
texture-atlas/: Cargo.toml
texture-atlas/src/: lib.rs
texture-atlas/src/atlas_non_runtime/: atlas.rs  manager.rs  mod.rs
texture-atlas/src/atlas_simple/: atlas.rs  manager.rs  mod.rs
texture-atlas/src/atlas_with_runtime/: atlas.rs  mod.rs
texture-atlas/src/single_thread/: atlas.rs  manager.rs
utils/: Cargo.toml
(+132 files in other folders)
