[package]
name = "buffer-atlas"
version = { workspace = true }
edition = "2024"
publish = false

[dependencies]
wgpu = { workspace = true }
guillotiere = "0.6" # texture atlas library # internal use only
parking_lot = { workspace = true }
uuid = { version = "1.17.0", features = ["v4"] } # internal use only
dashmap = { workspace = true }
thiserror = { workspace = true }
fortuples = "=0.9.1" # internal use only

[dev-dependencies]
pollster = { workspace = true }
