[package]
name = "matcha"
version = "0.1.0"
edition = "2024"

[dependencies]
# self
matcha-core = { workspace = true }
matcha-widgets = { workspace = true }
# runtime
tokio = { workspace = true }
async-trait = { workspace = true }
# winit
winit = { workspace = true }
# graphics
wgpu = { workspace = true }
bytemuck = { features = ["derive"], workspace = true }
vello = { workspace = true }
# math
nalgebra = { features = ["bytemuck"], workspace = true }
# image
image = { workspace = true }
# other
pathfinder_geometry = { workspace = true }
cosmic-text = { workspace = true }
rand = { workspace = true }
bitflags = { workspace = true }
num = { workspace = true }
downcast-rs = { workspace = true }
ahash = { workspace = true }
uuid = { features = ["v4"], workspace = true }