[package]
name = "matcha"
version = { workspace = true }
edition = "2024"

[dependencies]
# self
matcha-core = { workspace = true }
matcha-widgets = { workspace = true }
text-render = { workspace = true }

# runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# winit
winit = { workspace = true }

# graphics
wgpu = { workspace = true }
bytemuck = { features = ["derive"], workspace = true }
vello = { workspace = true }

# math
nalgebra = { features = ["bytemuck"], workspace = true }

# image
image = { workspace = true }

# font
fontdb = { workspace = true }
fontdue = { workspace = true }

# other
pathfinder_geometry = { workspace = true }
cosmic-text = { workspace = true }
rand = { workspace = true }
bitflags = { workspace = true }
num = { workspace = true }
