[package]
name = "matcha-core"
version =  { workspace = true }
edition = "2024"
publish = false

[dependencies]
# self
utils = { workspace = true }

# async runtime, utility
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }

# winit
winit = { workspace = true }

# graphics
wgpu = { workspace = true }
bytemuck = { features = ["derive"], workspace = true }
vello = { workspace = true }

# math
nalgebra = { features = ["bytemuck"], workspace = true }

# image
image = { workspace = true }

# other
pathfinder_geometry = { workspace = true }
cosmic-text = { workspace = true }
rand = { workspace = true }
bitflags = { workspace = true }
num = { workspace = true }
fxhash = { workspace = true }
lru = { workspace = true }
