[package]
name = "matcha-widgets"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# matcha
matcha-core = { workspace = true }

# runtime
tokio = { workspace = true }
async-trait = { workspace = true }
# winit
winit = { workspace = true }
# graphics
wgpu = { workspace = true }
bytemuck = { features = ["derive"], workspace = true }
# math
nalgebra = { features = ["bytemuck"], workspace = true }
# image
image = { workspace = true }
# other
rand = { workspace = true }
num = { workspace = true }
downcast-rs = { workspace = true }
ahash = { workspace = true }
uuid = { features = ["v4"], workspace = true }