[package]
name = "text-render"
version = { workspace = true }
edition = "2024"
publish = false

[dependencies]
fontdb = { workspace = true }
fontdue = { workspace = true }
wgpu = { workspace = true }
nalgebra = { workspace = true }

[dev-dependencies]
pollster = { workspace = true }

[lints]
workspace = true
